<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">巡检</string>
    <string name="menu_settings">设置</string>
    <string name="activationtitle">请输入序列号:</string>
    <string name="activationalert">激活序列号</string>
    <string name="activationbtn">激活软件</string>
    <string name="activatingbtn">验证中</string>
    <string name="activationlabel">软件需要激活</string>
    <string name="btnlocatetext">报告位置</string>
    <string name="App_Description">欢迎使用奥凯软件！</string>
    <string name="serveripalert">服务器IP或域名</string>
    <string name="btnipsettext">更改服务器IP</string>
    <string name="btnbindtext">绑定到服务器</string>
    <string name="btnstart">开始巡检</string>
    <string name="btnpause">暂 停</string>
    <string name="btnstop">完成巡检</string>
    <string name="onpatroltext">巡检进行中\u2026</string>
    <string name="onpausetext">暂停中!</string>
    <string name="btngetphototext">拍照上传</string>
    <string name="msg_get_photo_failure">获取图片失败!</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_server_setting">服务器设置</string>
    <string name="server_setting_savetext">保 存</string>
    <string name="btnviewmode_text">盯防模式</string>
    <string name="btnpatrolmode_text">巡检模式</string>
    <string name="server_setting_hint">请输入服务器IP</string>
    <string name="btnSave">上 传</string>
    <string name="title_activity_remark">备注</string>
    <string name="remark">请填写备注。。。</string>
    <string name="title_activity_wel_come">模式选择</string>

</resources>